<resources>
    <string name="app_logo">app logo</string>
    <string name="app_name">Soundsight</string>
    <string name="app_tagline">Empowering Every Sense</string>
    <string name="audio">Audio</string>
    <string name="blind_text">here the object detected text will appear</string>
    <string name="email">Email</string>
    <string name="hello">Hello</string>
    <string name="helpline">NCPEDP Helpline for PWD in need of legal aid and support.</string>
    <string name="helpline_con">For persons with disabilities in need of legal aid and support.</string>
    <string name="helpline_hours">Monday–Friday | 10 am - 6 pm</string>
    <string name="helpline_ic">Helpline Icon</string>
    <string name="helpline_menu">Help-Line</string>
    <string name="helpline_number">+919811980108</string>
    <string name="home">Home</string>
    <string name="login">Login</string>
    <string name="login_button">Login</string>
    <string name="national_con">India\'s first platform to provide legal aid and guidance on different resources available for persons with disabilities.</string>
    <string name="national_helpline">National Helpline Number</string>
    <string name="national_helpline_number">14456</string>
    <string name="or_sign_in_with">or sign in with</string>
    <string name="password">Password</string>
    <string name="sign_en">Encyclopedia</string>
    <string name="sign_text">here the sign to speech text will appear</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up_prompt">Don\'t have an account? Sign Up</string>
    <string name="stop">stop</string>
    <string name="translate">Translate</string>
    <string name="translation">Translation</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_button_text">Login</string>
    <string name="social_sign_in">or sign in with</string>
    <string name="do_have_account">Don\'t have an account? Sign Up</string>
    <string name="google_sign_in">Google</string>
    <string name="facebook_sign_in">Facebook</string>
    <string name="auditory">Auditory user</string>
    <string name="blind">Blind user</string>
    <string name="phone_hint">Phone Number</string>
    <string name="already_have_acc">Already have an account? login</string>
    <string name="choose_impairment">Choose Your Impairment</string>
    <string name="auditory_impaired">Auditory Impairment</string>
    <string name="visually_impaired">Visionary Impairment</string>
    <string name="next">Next</string>
    <string name="Log_out">Log out</string>
</resources>
